# Stock-Data-Service

./: .env  .gitignore  Dockerfile  README.md  config.py  data_archiver.py  data_parser.py  data_processor.py  docker-compose.yml  email_sender.py  main.py  mos_stock_2023-10-13_2023-10-13_10-36-21.csv  mos_stock_2023-10-13_2023-10-13_10-57-39.csv  mos_stock_2023-10-13_2023-10-13_11-08-04.csv  mos_stock_2025-04-03_2025-04-03_14-03-08.csv  mos_stock_2025-04-03_2025-04-03_14-16-21.csv  mos_stock_2025-04-03_2025-04-03_14-29-35.csv  pyproject.toml  requirements.txt  run_parser.py  users.db
Web/: app.py  models.py
Web/templates/: index.html  login.html  signup.html  test.html
data/2025-04-14/: mos_stock_2025-04-14_15-31-18.csv  mos_stock_2025-04-14_15-44-34.csv  mos_stock_2025-04-14_15-58-11.csv
data/2025-05-07/: mos_stock_2025-05-07_16-35-34.csv  mos_stock_2025-05-07_16-48-50.csv  mos_stock_2025-05-07_17-02-18.csv
data/2025-07-01/: mos_stock_2025-07-01_13-03-15.csv  mos_stock_2025-07-01_13-16-37.csv  mos_stock_2025-07-01_13-30-15.csv
data/2025-07-07/: mos_stock_2025-07-07_15-25-05.csv  mos_stock_2025-07-07_15-38-22.csv  mos_stock_2025-07-07_15-51-48.csv
instance/: users.db
migrations/: env.py
migrations/versions/: 0b120521f64c_init_schema.py  379ab0580e7b_init_schema.py  83ddc61c4e9d_init_schema.py  a3148056643d_init_schema.py
src/: config.py  data_archiver.py  data_parser.py  data_processor.py  database.py  email_sender.py  main.py  scheduler.py
src/auth/: crud.py  (+5 more)
tests/: test_data_processor.py  test_schemas.py
web/: app.py  database.py  models.py
(+45 files in other folders)
