[project]
name = "stock-data-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "authx>=1.7.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "sqladmin>=0.27.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
